--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
     <div id="root"></div>
     <div id="toast"></div>
     <div id="addEditPostModal"></div>
+    <div id="editUserProfile"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
